--- a/wallpaper/package.json
+++ b/wallpaper/package.json
@@ -12,16 +12,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.21",
     "@types/node-fetch": "^2.6.11",
-    "typescript": "^5.3.3",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "express": "^5.0.0-beta.1",
-    "node-fetch": "^2.7.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "cors": "^2.8.5"
+    "express": "^5.0.0-beta.1",
+    "node-cron": "^4.2.0",
+    "node-fetch": "^2.7.0"
   }
 }
