--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '3.8'
 
 services:
-  # Base de données MySQL
   db:
     image: mysql:8.0
     container_name: wallpaper-guessr-db
@@ -15,43 +14,14 @@ services:
       - "3307:3306"
     volumes:
       - mysql_data:/var/lib/mysql
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - wallpaper-network
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       timeout: 20s
       retries: 10
+      interval: 10s
 
-  # Service API principal
-  api:
-    build:
-      context: ./api
-      dockerfile: Dockerfile
-    container_name: wallpaper-guessr-api
-    restart: unless-stopped
-    ports:
-      - "3300:3300"
-    env_file:
-      - .env
-    environment:
-      - DB_HOST=db
-      - WALLPAPER_SERVICE_URL=http://wallpaper:3301
-    depends_on:
-      db:
-        condition: service_healthy
-    volumes:
-      - ./countries.json:/app/countries.json:ro
-      - ./.env:/app/.env:ro
-    networks:
-      - wallpaper-network
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3300/health"]
-      timeout: 10s
-      retries: 5
-      start_period: 30s
-
-  # Service Wallpaper (scraping)
   wallpaper:
     build:
       context: ./wallpaper
@@ -60,23 +30,54 @@ services:
     restart: unless-stopped
     ports:
       - "3301:3301"
-    env_file:
-      - .env
     environment:
+      - NODE_ENV=production
       - API_SERVICE_URL=http://api:3300
     depends_on:
       db:
         condition: service_healthy
-      api:
-        condition: service_healthy
     volumes:
       - wallpaper_images:/app/dist/images
-      - ./countries.json:/app/countries.json:ro
-      - ./.env:/app/.env:ro
     networks:
       - wallpaper-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3301/health"]
+      timeout: 10s
+      retries: 5
+      interval: 15s
+      start_period: 30s
 
-  # Frontend React
+  api:
+    build:
+      context: ./api
+      dockerfile: Dockerfile
+    container_name: wallpaper-guessr-api
+    restart: unless-stopped
+    ports:
+      - "3300:3300"
+    environment:
+      - NODE_ENV=production
+      - DB_HOST=db
+      - DB_PORT=3306
+      - DB_NAME=wallpaper_guessr
+      - DB_USER=wallpaper_user
+      - DB_PASSWORD=wallpaper_password
+      - JWT_SECRET=JWT_AAGOBkza0z52
+      - WALLPAPER_SERVICE_URL=http://wallpaper:3301
+    depends_on:
+      db:
+        condition: service_healthy
+      wallpaper:
+        condition: service_healthy
+    networks:
+      - wallpaper-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3300/health"]
+      timeout: 10s
+      retries: 5
+      interval: 15s
+      start_period: 60s 
+
   front:
     build:
       context: ./front
